--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,13 +20,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: install Rust stable
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: './src-tauri -> target'
+
       - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-
-      - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable
+          node-version: 'lts/*'
+          cache: 'yarn'
 
       - name: install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-20.04'
