--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  publish-tauri:
+  build-binaries:
     permissions:
       contents: write
     strategy:
