--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
 
+      - name: Install frontend
+        run: |
+          yarn --frozen-lockfile
+
       - uses: JonasKruckenberg/tauri-build@v1
         id: tauri_build
 
