--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,19 +1,34 @@
+workspace = { members = ["dnd_protos"] }
+
 [package]
 name = "dnd-sheet-tauri"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
+build = "build/build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 tauri-build = { version = "1", features = [] }
+tonic-build = "0.11"
+# Used for building data
+prost = "0.12"
+[build-dependencies.dnd_protos]
+path = "dnd_protos/"
+
 
 [dependencies]
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tonic = "0.11"
+prost = "0.12"
+prost-types = "0.12"
+
+[dependencies.dnd_protos]
+path = "dnd_protos/"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
