--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = "1"
 tonic = "0.11"
 prost = "0.12"
 prost-types = "0.12"
+rust-embed= { version = "8.3.0", features = ["interpolate-folder-path"] }
 
 [dependencies.dnd_protos]
 path = "dnd_protos/"
