--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ tonic = "0.11"
 prost = "0.12"
 prost-types = "0.12"
 rust-embed= { version = "8.3.0", features = ["interpolate-folder-path"] }
+eval = "0.4"
 
 [dependencies.dnd_protos]
 path = "dnd_protos/"
