--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ build = "build/build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2.0.0-beta.10", features = [] }
 tonic-build = "0.11"
 # Used for building data
 prost = "0.12"
@@ -20,7 +20,7 @@ path = "dnd_protos/"
 
 
 [dependencies]
-tauri = { version = "1", features = ["shell-open"] }
+tauri = { version = "2.0.0-beta.10", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tonic = "0.11"
