--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2"
+    "@tauri-apps/api": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "svelte": "^4.2.8",
     "vite": "^5.0.0",
-    "@tauri-apps/cli": "^2"
+    "@tauri-apps/cli": ">=2.0.0-beta.0"
   }
 }
