--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@tauri-apps/api": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0-beta.2",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tauri-apps/cli": ">=2.0.0-beta.0",
     "svelte": "^4.2.8",
-    "vite": "^5.0.0",
-    "@tauri-apps/cli": ">=2.0.0-beta.0"
+    "vite": "^5.0.0"
   }
 }
