--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,8 @@ prost = "0.12"
 prost-types = "0.12"
 rust-embed= { version = "8.3.0", features = ["interpolate-folder-path"] }
 evalexpr = "11.3"
+tauri-plugin-dialog = "2.0.0-beta.3"
+once_cell = "1.19.0"
 
 [dependencies.dnd_protos]
 path = "dnd_protos/"
