--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,7 @@ path = "dnd_protos/"
 
 
 [dependencies]
-tauri = { version = "2.0.0-beta.10", features = [] }
+tauri = { version = "2.0.0-beta.10", features = ["unstable"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tonic = "0.11"
