--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = "1"
 tonic = "0.11"
 prost = "0.12"
 prost-types = "0.12"
-rust-embed= { version = "8.3.0", features = ["interpolate-folder-path"] }
+rust-embed= { version = "8.3.0", features = ["compression"] }
 evalexpr = "11.3"
 tauri-plugin-dialog = "2.0.0-beta.3"
 once_cell = "1.19.0"
