--- a/src-tauri/permissions/default.toml
+++ b/src-tauri/permissions/default.toml
@@ -9,5 +9,6 @@ commands.allow = [
     "get_available_classes",
     "get_available_races",
     "create_sheet",
-    "get_available_skills"
+    "get_available_skills",
+    "calculate_ability"
 ]
