--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0"
   },
   "devDependencies": {
+		"@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tauri-apps/cli": ">=2.0.0-beta.0",
     "svelte": "^4.2.8",
