--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "tauri": "tauri"
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "^2.0.0-beta.2",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0"
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.2"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
