--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,15 +15,16 @@ build = "build/build.rs"
 [build-dependencies]
 tauri-build = { version = "2.0.0-beta", features = [] }
 tonic-build = "0.11"
-# Used for building data
 prost = "0.12"
 dnd_protos = { path = "dnd_protos/" }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 [dependencies]
 dnd_protos = { path = "dnd_protos/" }
-tauri = { version = "2.0.0-beta", features = ["unstable", "devtools"] }
-tauri-plugin-fs = "2.0.0-beta.4" # TODO remove when fixed
+tauri = { version = "2.0.0-beta", features = ["unstable"] }
 tauri-plugin-shell = "2.0.0-beta"
+tauri-plugin-dialog = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tonic = "0.11"
@@ -34,8 +35,8 @@ prost-types = "0.12"
 # It also helps when running on Android in debug mode.
 rust-embed = { version = "8.3.0", features = ["compression", "debug-embed", "include-exclude"] }
 evalexpr = "11.3"
-tauri-plugin-dialog = ">=2.0.0-beta.0"
-once_cell = "1.19.0"
+once_cell = "1.19"
+parking_lot = "0.12"
 
 # Only on Tauri stable
 # [features]
