--- a/src-tauri/dnd_protos/Cargo.toml
+++ b/src-tauri/dnd_protos/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 tonic = "0.11"
 prost = "0.12"
 prost-types = "0.12"
+serde = { version = "1.0", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = "0.11"
