--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dnd-sheet-tauri",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.0-alpha1",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
