--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "^2.0.0-beta.2",
-    "@tauri-apps/plugin-shell": "^2.0.0-beta.2"
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
+    "svelte-i18n": "^4.0.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
