--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "^2.0.0-beta.2",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
+    "mdi-svelte": "^1.1.2",
     "svelte-i18n": "^4.0.0"
   },
   "devDependencies": {
